# whisper.cpp

.github/workflows/: bindings-python.yml
bindings/python/: .gitignore  README.md  example.py  pybind.cpp  pyproject.toml  setup.py
bindings/python/tests/: test_bindings.py
