[build-system]
requires = ["setuptools", "wheel", "pybind11", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "pywhisper"
version = "0.0.1"
description = "Python bindings for whisper.cpp"
authors = [
    {name = "Jan Huenermann", email = "your.email@example.com"},
]

[project.urls]
homepage = "https://github.com/ggerganov/whisper.cpp#readme"
repository = "https://github.com/ggerganov/whisper.cpp"
